[gd_scene load_steps=7 format=3 uid="uid://causf6bjt06hi"]

[ext_resource type="Shader" uid="uid://dc4oav4wip1yi" path="res://data/shaders/dynamic.gdshader" id="2_yeeyf"]
[ext_resource type="PackedScene" uid="uid://cg8gsg3iyhmeu" path="res://data/ui/try_me.tscn" id="4_2qaj2"]
[ext_resource type="Script" uid="uid://cnxwc4e8vdiox" path="res://data/scripts/interactive_grid.gd" id="4_w868w"]
[ext_resource type="PackedScene" uid="uid://dbna5exmjhbhp" path="res://data/scenes/pawn_player.tscn" id="5_dxyxo"]

[sub_resource type="BoxMesh" id="BoxMesh_yeeyf"]
size = Vector3(0.8, 0.1, 0.8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pbhab"]
render_priority = 0
shader = ExtResource("2_yeeyf")

[node name="Main" type="Node3D"]

[node name="PawnPlayer" parent="." instance=ExtResource("5_dxyxo")]

[node name="RayCastFromMouse" parent="PawnPlayer" index="2"]
exclude_parent = false
collision_mask = 0

[node name="InteractiveGrid" type="InteractiveGrid" parent="."]
_rows = 17
_columns = 17
_cell_mesh = SubResource("BoxMesh_yeeyf")
"walkable color" = Color(0.17129207, 0.6589929, 0.839433, 0.3137255)
enable_alpha_pass = true
_material_override = SubResource("ShaderMaterial_pbhab")
script = ExtResource("4_w868w")

[node name="TryMe" parent="." instance=ExtResource("4_2qaj2")]

[editable path="PawnPlayer"]
[editable path="TryMe"]
